# k2cv

./: CMakeLists.txt  README.md
include/: BlobDetector.h  Constants.h  KinectHandler.h
src/: BlobDetector.cpp  Constants.cpp  KinectHandler.cpp  main.cpp
